<?xml version="1.0"?>
<package format="3">
  <name>mserve_drivechain</name>
  <version>0.1.0</version>
  <description>Drivechain node for mServe. Owns diff-drive kinematics and DDSM115 motor communication.</description>
  <maintainer email="ecm@example.com">ecm</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>mserve_interfaces</build_depend>
  <build_depend>mserve_utils</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>mserve_interfaces</exec_depend>
  <exec_depend>mserve_utils</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
</package>
